# Tilemap-Agents

./: CMakeLists.txt  README.md  emscripten.html
src/: CMakeLists.txt  crate.cpp  crate.h  entity.cpp  entity.h  events.cpp  events.h  globals.h  main.cpp  pathfinding.cpp  pathfinding.h  player.cpp  player.h  tasks.cpp  tasks.h  tilemap.cpp  tilemap.h  worker.cpp  worker.h
